--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <script src="js/map.js" defer></script>
 </head>
 <body>
+    <div id="wrapper">
+        <input type="text" placeholder="Entrez une ville" id="field" >
+        <button id="submit">Chercher</button>
+        <div id="error"></div>
+    </div>
     <div id="map"></div>
 </body>
 </html>
